# Capax

./: .gitignore  README.md  pyproject.toml  requirements.txt
capax/: __main__.py  config.py  engine.py  generator.py  qa.py  reference_runtime.py  server.py  utils.py  wizard.py
docs/: POLICY_LOCKS.md  QA_MATRIX.md
