[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capax"
version = "0.3.0"
description = "Capax: query cost guardrail for APIs with weighted concurrency, QA scenarios, and multi-runtime code generation."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "PyYAML>=6.0.1",
  "requests>=2.31.0",
]

[project.scripts]
capax = "capax.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["capax*"]
exclude = ["assets*", "packs*", "gen*", "server*", "tests*", "docs*"]
